--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# folder / test_results
+/test_results/
+/folder/
+
 # Distribution / packaging
 .Python
 build/
